<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!-- global -->
	<string name="app_name">UnivMobile</string>
	<string name="ok">OK</string>
	<string name="no_results">Pas de résultat</string>
	<string name="no_libraries">Pas de bibliothèque</string>
	<string name="no_media">Pas de lien</string>
	<string name="need_to_login_to_post_comment">Merci de vous connecter pour pouvoir envoyer votre commentaire</string>
	<string name="need_to_login_to_post_poi">Merci de vous connecter pour pouvoir ajouter votre point d\'intérêt</string>
	<string name="need_to_login_to_bookmark_poi">Merci de vous connecter pour ajouter votre bookmark</string>
	<string name="no_internet">Vous n\'êtes pas connecté à internet. Merci de vous connecter.</string>
	<string name="click_to_close">Etes-vous sûr de vouloir fermer l\'application Univmobile ?</string>
	<string name="home">Accueil</string>
    <string name="yes">Oui</string>
    <string name="no">Annuler</string>
	<string name="do_you_want_to_post_poi">Êtes vous sûr de vouloir poster le bon plan ?</string>
	<string name="do_you_want_to_post_comment">Êtes vous sûr de vouloir poster le commentaire ?</string>

	<!-- Select region and university -->
	<string name="select_region">Choisir sa région</string>
	<string name="select_university">Choisir son université</string>

	<!-- home fragment -->
	<string name="latest_news">Dernières actualités</string>
	<string name="geo_campus_title">Géo’Campus</string>
	<string name="view_all_news">Voir toutes les Actualités</string>

	<!-- action bar -->
	<string name="login">Connectez-vous</string>
	<string name="hello">Bonjour</string>

	<!-- notifications fragment -->
	<string name="notifications">NOTIFICATIONS</string>
	<string name="before">Il y a </string>
	<string name="minutes">minutes</string>
	<string name="hours">heures</string>

	<!-- menu -->
	<string name="menu_services">Mes services</string>
	<string name="menu_university">Act’Universitaire</string>
	<string name="menu_interests">Tou\'trouver</string>
	<string name="menu_my">Ma vie U</string>
	<string name="menu_group_profile">Mon profil</string>
	<string name="menu_group_library">Mes bibliothèques</string>
	<string name="menu_group_ent">ENT</string>
	<string name="menu_group_workspace">Ma médiathèque</string>
	<string name="menu_group_students">Futurs étudiants</string>
	<string name="menu_group_geo">GéoCampus</string>
	<string name="menu_group_paris">Que faire à Paris</string>
	<string name="menu_group_bonplans">Les bons plans</string>

	<!-- media -->
	<string name="my_media">Mes Médiathèques</string>
	<string name="go_to_media_main">OUVRIR MA MÉDIATHÈQUE</string>

	<!-- library -->
	<string name="my_library">Mes bibliothèques</string>
	<string name="go_to_library_main">VOIR TOUTES LES BIBLIOTHÈQUES</string>
	<string name="add_lib_to_bookmarks">Ajouter d’autres bibliothèques</string>

	<!-- bookmarks -->
	<string name="bookmarks">Bookmarks</string>
	<string name="go_to_bookmarks_main">VOIR TOUT MES BOOKMARKS</string>

	<!-- geo campus -->
	<string name="sort_by_categories">TRIER PAR CATEGORIES</string>
	<string name="bookmarks_upper">BOOKMARK</string>
	<string name="menu">MENU</string>
	<string name="research">RECHERCHER</string>
	<string name="post">VALIDER</string>

	<!-- search -->
	<string name="search_hint">Tapez votre recherche</string>
	<string name="search_results">Résultats</string>

	<!-- Login -->
	<string name="connection">Connexion</string>
	<string name="name">nom d\'utilisateur</string>
	<string name="password">Mot de passe</string>

	<!-- change university -->
	<string name="current_univ">Université actuelle</string>
	<string name="choose_univ">Choisir une autre université</string>

	<!-- add poi -->
	<string name="new_poi_tilte">Soumettre un nouveau Bon Plan</string>
	<string name="select_poi_category">Séléctionnez une catégorie*</string>
	<string name="poi_name_hint">Nom du bon plan *</string>
	<string name="address_hint">Adresse *</string>
	<string name="city_hint">Ville</string>
	<string name="phone_hint">Numéro de téléphone</string>
	<string name="email_hint">Adresse email</string>
	<string name="poi_description_hint">Entrez une déscription du lieux, des services proposés et des infos pratiques pouvant être utiles à la communauté*</string>
	<string name="missing_info">Informations manquantes</string>

	<!--poi details -->
	<string name="poi_site">Site web</string>
	<string name="poi_welcome">Publics accueillis</string>
	<string name="poi_disciplines">Disciplines</string>
	<string name="poi_work_hours">Horaires et jours d\'ouverture</string>
	<string name="poi_close_hours">Horaires et jours de fermeture</string>
	<string name="poi_floor">Emplacement</string>
	<string name="poi_acces">Accès</string>

    <!-- change university dialog fragment info -->
    <string name="please_confirm">Veuillez confirmer</string>
    <string name="do_you_want_to_change_unviersity">Etes-vous sûr de vouloir sélectionner une autre Université ?</string>
</resources>